2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        * http/tests/appcache/empty-manifest-expected.txt: Added.
        * http/tests/appcache/empty-manifest.html: Added.
        * http/tests/appcache/resources/empty.manifest: Added.

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Update the expected result.
        
        * http/tests/appcache/simple-expected.txt:

2008-05-12  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        Add simple appcache test.

        * http/conf/mime.types:
        * http/tests/appcache: Added.
        * http/tests/appcache/resources: Added.
        * http/tests/appcache/resources/not-in-cache.txt: Added.
        * http/tests/appcache/resources/simple.manifest: Added.
        * http/tests/appcache/resources/simple.txt: Added.
        * http/tests/appcache/simple-expected.txt: Added.
        * http/tests/appcache/simple.html: Added.
        * platform/gtk/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:

2008-05-09  Sam Weinig  <sam@webkit.org>

        Reviewed by Mark Rowe.

        Test for https://bugs.webkit.org/show_bug.cgi?id=18958
        NULL pointer dereference in NamedAttrMap::setNamedItem

        * fast/dom/NamedNodeMap-setNamedItem-crash-expected.txt: Added.
        * fast/dom/NamedNodeMap-setNamedItem-crash.html: Added.

2008-05-09  Adam Barth  <abarth-webkit@adambarth.com>

        Reviewed by Sam Weinig.

        Update tests to listen for message events on the window instead of
        the document.  Also, added a test that the event is sent to the
        window and not to the document.

        * http/tests/messaging/cross-domain-message-event-dispatch-expected.txt: Added.
        * http/tests/messaging/cross-domain-message-event-dispatch.html: Added.
        * http/tests/messaging/cross-domain-message-send.html:
        * http/tests/messaging/resources/cross-domain-message-receive.html: