@@ -1,0 +1,2 @@
+This tests that a manifest can contain itself as a resource.
+SUCCESS
