@@ -1,0 +1,2 @@
+CACHE MANIFEST
+manifest-containing-itself.manifest
