@@ -1,3 +1,12 @@
+2008-05-12  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Adam.
+
+        Handle the case when a resource with the same URL as the manifest is listed in the manifest.
+
+        * loader/appcache/ApplicationCacheGroup.cpp:
+        (WebCore::ApplicationCacheGroup::addEntry):
+
 2008-05-12  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Dan Bernstein.
